[package]
name = "rhizome"
version = "0.8.0"
authors = ["Xu, Junfeng <xu.junfeng@outlook.com>"]
license = "AGPL-3.0-only"
homepage = "https://github.com/nxjfxu/rhizome"
repository = "https://github.com/nxjfxu/rhizome"
edition = "2018"


[build-dependencies]
cargo-lock = "6"

[dependencies]
actix-rt = "1"
actix-web = "3"
clap = "2"
lazy_static = "1"
serde = "1"
tera = "1"
url = "2"
walkdir = "2"

[dependencies.diesel]
version = "1"
features = [ "r2d2", "sqlite" ]

[dependencies.diesel_migrations]
version = "1"

# In-repository dependencies

[dependencies.hormone]
version = "0.12"
path = "hormone"




#[profile.release]
#debug = true

