[package]
name = "hormone"
version = "0.9.0"
authors = ["Xu, Junfeng <xu.junfeng@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
horrorshow = "0.8"

[dependencies.pulldown-cmark]
version = "0.8"
default-features = false



