[package]
name = "hormone"
version = "0.11.0"
authors = ["Xu, Junfeng <xu.junfeng@outlook.com>"]
license = "AGPL-3.0-only"
description = "A textual scripting language"
homepage = "https://github.com/nxjfxu/rhizome"
repository = "https://github.com/nxjfxu/rhizome"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
horrorshow = "0.8"

[dependencies.pulldown-cmark]
version = "0.8"
default-features = false



